# stellarbeca

blockchain/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
blockchain/api/: README.md  package.json  typeorm.config.ts
blockchain/api/src/: app.module.ts  main.ts
blockchain/contracts/beca/: Cargo.toml
blockchain/contracts/beca/src/: lib.rs
blockchain/contracts/beca/test_snapshots/: test_create_grant_fails_with_duplicate_participants.1.json  test_create_grant_successfully.1.json  test_fails_on_claiming_payment_twice.1.json  test_full_flow_one_milestone.1.json
blockchain/contracts/beca/tests/: test.rs
blockchain/main.ts/: README.md  package.json
blockchain/main.ts/src/: index.ts
front-end/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
front-end/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
front-end/app/admin/: page.tsx
front-end/components/: faq.tsx  footer.tsx  header.tsx  hero-section.tsx  stellar-logo.tsx
front-end/components/admin/: admin-header.tsx  beca-details.tsx  expandable-card.tsx  list-becas.tsx  navigation-tabs.tsx  ranking-researchers.tsx  rendimientos.tsx  sidebar-menu.tsx  transactions.tsx  wallet-require-message.tsx
front-end/components/ui/: button.tsx  floating-panel.tsx  stellar-avatar.tsx  stellar-icon.tsx  wallet-dropdown.tsx
front-end/contexts/: form-context.tsx  wallet-context.tsx
front-end/data/: mock_transactions.ts
front-end/hooks/: use-wallet-actions.ts
front-end/lib/: transaction-utils.tsx  wallet-utils.ts
front-end/types/: transactions.ts
(+18 files in other folders)
